# tgdata-rs

./: .gitignore  Cargo.toml  README.md  TDATA_INTERNALS.md  patch_opentele.py  requirements.txt  setup.bat  setup.sh  tg_tool.py
.github/workflows/: release.yml
src/: main.rs  tdata.rs  telegram.rs
